syntax = "proto3";

package api;

option go_package = "github.com/yherasymets/go-shorter/api/proto";

service Shorter {
    rpc Short(UrlRequest) returns (UrlResponse){}
}

message UrlRequest {
    string urlName = 1;
}

message UrlResponse {
    string urlResult = 1;
}
