syntax = "proto3";

package proto;

option go_package = "github.com/yherasymets/go-shorter/proto";

service Shorter {
    rpc Create(CreateRequest) returns (UrlResponse){}
    rpc Get(GetRequest) returns (UrlResponse){}
}

message CreateRequest {
    string fullURL = 1;
}

message GetRequest {
    string shortURL = 1;
}

message UrlResponse {
    string result = 1;
    string status = 2;
}
